# ZJU-Compiling-Principle

./: input
accipit/tests/: compiler
accipit/tests/lab4/: array_init2.sy
accsys/: CMakeLists.txt
accsys-cmake-template/: .gitignore  CMakeLists.txt  add.sy  buf  debug.sy  hello.s  input  output  output.txt  past.sy  quick-test-lab3.sh  reTest-one.sh
accsys-cmake-template-new/: debug.sy
accsys-cmake-template-new/accsys/: CMakeLists.txt
accsys-cmake-template-new/accsys/include/ir/: ir.h
accsys-cmake-template-new/accsys/lib/: CMakeLists.txt
accsys-cmake-template-new/accsys/lib/ir/: CMakeLists.txt  ir.cpp
accsys-cmake-template-new/accsys/test/ir/: function_test.cpp
accsys-cmake-template-new/src/ast/: ast.cpp
accsys-cmake-template-new/src/semantic/: semantic.cpp
accsys-cmake-template/accsys/include/ir/: ir.h  type.h
accsys-cmake-template/accsys/include/utils/: casting.h  list.h
accsys-cmake-template/accsys/lib/: CMakeLists.txt
accsys-cmake-template/accsys/lib/ir/: ir.cpp  ir_writer.cpp  type.cpp
accsys-cmake-template/accsys/test/ir/: CMakeLists.txt  function_test.cpp  instruction_test.cpp  type_test.cpp
accsys-cmake-template/include/ast/: ast.h
accsys-cmake-template/include/common/: common.def
accsys-cmake-template/include/ir/: ir.def  ir.h
accsys-cmake-template/include/semantic/: semantic.h
accsys-cmake-template/include/utils/: list.h
accsys-cmake-template/ir/: add.acc  array1.acc  array2.acc  array_hard.acc  array_init2.acc  array_parameter.acc  binary_search.acc  combinator.acc  div.acc  factorial.acc  func_call.acc  global_test1.acc  if_complex_expr.acc  if_test1.acc  if_test2.acc  if_test3.acc  merge_sort.acc  mul.acc  op_priority1.acc  op_priority2.acc  op_priority3.acc  quick_sort.acc  rem.acc  short_circuit1.acc  short_circuit2.acc  sort_array.acc  stmt_expr.acc  sudoku.acc  two_dimension_array.acc  unary_op.acc  while_if.acc  while_if_test1.acc  while_if_test2.acc  while_test1.acc
accsys-cmake-template/src/: flex file before contain.txt  main.cpp  pieceOFBUG.txt  sysy.l  sysy.y
accsys-cmake-template/src/ast/: ast.cpp
accsys-cmake-template/src/ir/: ir_gen.cpp
accsys-cmake-template/src/semantic/: semantic.cpp
accsys-rs-master/: Cargo.toml
accsys-rs-master/examples/: test.sy
accsys-rs-master/src/: lib.rs
accsys-rs-master/src/frontend/: parser.rs
accsys-rs-master/src/utils/: error.rs
accsys/include/ir/: ir.h  type.h
accsys/lib/ir/: CMakeLists.txt
accsys/test/: CMakeLists.txt
accsys/test/ir/: CMakeLists.txt
docs/: syntax.md
our-code/: .clang-tidy  CMakeLists.txt  README.md  factorial-ast.txt  factorial-semantic-log.txt  func_defn-ast.txt  func_defn-semantic-log.txt  ircode.txt  past.sy  test.sy
our-code/include/ir/: ir.h
our-code/src/: main.cpp  sysy.y
our-code/src/ir/: ir.cpp  ir_writer.cpp  type.cpp
our-code/src/semantic/: semantic.cpp
rust-compiler/: README.md
rust-compiler/examples/: test.sy
rust-compiler/src/: main.rs
rust-compiler/src/ast/: ast.rs
rust-compiler/src/frontend/: lexer.rs
rust-compiler/src/midend/: init_globals.rs  mod.rs  tree2ssa.rs  type_checker.rs
rust-compiler/src/utils/: mod.rs
sysy-runtime-lib/: README.md
sysy-runtime-lib-master/: Makefile
tests/: a.sh  compiler  ircode.txt  old-test.py  test.py
tests/assembly/: add.s  array1.s  array2.s  array_hard.s  array_init1.s  array_init2.s  array_parameter.s  binary_search.s  combinator.s  div.s  exec.sh  factorial.s  func_call.s  global_test1.s  if_complex_expr.s  if_test1.s  if_test2.s  if_test3.s  merge_sort.s  mul.s  op_priority1.s  op_priority2.s  op_priority3.s  quick_sort.s  rem.s  short_circuit1.s  short_circuit2.s  sort_array.s  stmt_expr.s  sudoku.s  two_dimension_array.s  unary_op.s  while_if.s  while_if_test1.s  while_if_test2.s  while_test1.s
tests/ir/: array1.acc  array2.acc  array_hard.acc  array_init1.acc  array_parameter.acc  binary_search.acc  combinator.acc  div.acc  factorial.acc  func_call.acc  global_test1.acc  if_complex_expr.acc  if_test1.acc  if_test2.acc  if_test3.acc  merge_sort.acc  mul.acc  op_priority1.acc  op_priority2.acc  op_priority3.acc  quick_sort.acc  rem.acc  short_circuit1.acc  short_circuit2.acc  sort_array.acc  stmt_expr.acc  sudoku.acc  two_dimension_array.acc  unary_op.acc  while_if.acc  while_if_test1.acc  while_if_test2.acc  while_test1.acc
tests/lab2/: assign_mismatch.sy
tests/lab3/: array_init1.sy
tests/result-lab2/: compiler  result.txt
